[package]
name = "timely-communication-master"
version = "0.13.0-dev.1"
authors = ["Frank McSherry <fmcsherry@me.com>"]
description = "Communication layer for timely dataflow"
edition = "2018"

# These URLs point to more information about the repository

documentation = "https://docs.rs/timely/"
homepage = "https://github.com/TimelyDataflow/timely-dataflow"
repository = "https://github.com/TimelyDataflow/timely-dataflow.git"
keywords = ["timely", "dataflow"]
license = "MIT"

[lib]
name = "timely_communication"

[features]
default = ["getopts"]

[dependencies]
getopts = { version = "0.2.14", optional = true }
bincode = { version = "1.0", optional = true }
serde_derive = "1.0"
serde = "1.0"
abomonation = "0.7"
abomonation_derive = "0.5"
timely-bytes-master = { path = "../bytes", version = "=0.13.0-dev.1" }
timely-logging-master = { path = "../logging", version = "=0.13.0-dev.1" }
crossbeam-channel = "0.5.0"
