[package]
name = "timely-container-master"
version = "0.13.0-dev.1"
authors = ["Frank McSherry <fmcsherry@me.com>"]
description = "Container abstractions for Timely"
edition = "2018"
license = "MIT"
repository = "https://github.com/TimelyDataflow/timely-dataflow"

[lib]
name = "timely_container"

[dependencies]
columnation-master = "=0.1.0-dev.1"
serde = { version = "1.0"}
