[package]
name = "timely-logging-master"
version = "0.13.0-dev.1"
authors = ["Frank McSherry <fmcsherry@me.com>"]
edition = "2018"

description = "Common timely logging infrastructure"

documentation = "https://docs.rs/timely/"
homepage = "https://github.com/TimelyDataflow/timely-dataflow"
repository = "https://github.com/TimelyDataflow/timely-dataflow.git"
keywords = ["timely", "dataflow", "logging"]
license = "MIT"

[lib]
name = "timely_logging"
